// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBadge snapshot tests matches snapshot for Active status 1`] = `
<span
  aria-label="Status: Active"
  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-semibold bg-emerald-100 text-emerald-800 "
  role="status"
>
  Active
</span>
`;

exports[`StatusBadge snapshot tests matches snapshot for Completed status 1`] = `
<span
  aria-label="Status: Completed"
  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-semibold bg-sky-100 text-sky-800 "
  role="status"
>
  Completed
</span>
`;

exports[`StatusBadge snapshot tests matches snapshot for Disputed status 1`] = `
<span
  aria-label="Status: Disputed"
  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-semibold bg-rose-100 text-rose-800 "
  role="status"
>
  Disputed
</span>
`;

exports[`StatusBadge snapshot tests matches snapshot for Paid status 1`] = `
<span
  aria-label="Status: Paid"
  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-semibold bg-emerald-100 text-emerald-800 "
  role="status"
>
  Paid
</span>
`;

exports[`StatusBadge snapshot tests matches snapshot for Pending status 1`] = `
<span
  aria-label="Status: Pending"
  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-semibold bg-amber-100 text-amber-800 "
  role="status"
>
  Pending
</span>
`;

exports[`StatusBadge snapshot tests matches snapshot with additional className 1`] = `
<span
  aria-label="Status: Active"
  class="inline-flex items-center rounded-full px-3 py-1 text-sm font-semibold bg-emerald-100 text-emerald-800 ml-2"
  role="status"
>
  Active
</span>
`;
